Format Date Diff
Admin controller clean

asmin service complete and
use conf file

logins and users blades and controllers complete

--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
-    },
+        },
+        "files": ["app/Helpers/formatDateDiffHelper.php"]    },
     "autoload-dev": {
         "classmap": [
             "tests/TestCase.php"
