--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,18 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "type": "project",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/daverodal/webwargaming"
+        }
+    ],
+
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "guzzlehttp/guzzle":"~6.0"
+        "guzzlehttp/guzzle":"~6.0",
+        "daverodal/webwargaming": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -21,7 +29,8 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Wargame\\": "wargame/"
         },
         "files": ["app/Helpers/formatDateDiffHelper.php"]    },
     "autoload-dev": {
