--- a/composer.json
+++ b/composer.json
@@ -29,10 +29,9 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/",
-            "Wargame\\": "wargame/"
+            "App\\": "app/"
         },
-        "files": ["app/Helpers/formatDateDiffHelper.php"]    },
+        "files": ["wargame/Battle.php", "app/Helpers/formatDateDiffHelper.php"]    },
     "autoload-dev": {
         "classmap": [
             "tests/TestCase.php"
