--- a/package.json
+++ b/package.json
@@ -5,9 +5,6 @@
   },
   "dependencies": {
     "bootstrap-sass": "^3.0.0",
-    "bourbon": "^4.2.6",
-    "laravel-elixir": "^4.0.0",
-    "neat": "^1.2.2",
-    "node-neat": "^1.7.2"
+    "laravel-elixir": "^4.0.0"
   }
 }
