--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,10 @@
         },
         {
             "type": "path",
+            "url": "../rebellion"
+        },
+        {
+            "type": "path",
             "url": "../Medieval"
         }
     ],
@@ -21,6 +25,7 @@
         "guzzlehttp/guzzle":"~6.0",
         "daverodal/wargaming": "dev-master",
         "daverodal/Medieval": "dev-master",
+        "daverodal/rebellion": "dev-master",
         "cmgmyr/messenger": "~2.0"
     },
     "require-dev": {
