made wargame a path not repo include in composer

--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "type": "project",
     "repositories": [
         {
-            "type": "vcs",
-            "url": "https://github.com/daverodal/wargaming"
+            "type": "path",
+            "url": "../wargaming"
         },
         {
             "type": "path",
