--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "private": true,
   "devDependencies": {
-    "angular-right-click": "^0.1.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "gulp": "^3.8.8"
   },
   "dependencies": {
+    "angular": "^1.5.8",
+    "angular-modal-service": "^0.10.1",
+    "angular-right-click": "^0.1.0",
+    "angular-sanitize": "^1.5.8",
     "bootstrap-sass": "^3.0.0",
+    "jquery": "^2.2.4",
+    "jquery-browserify": "^1.8.1",
+    "jquery-ui": "^1.12.0",
     "laravel-elixir": "^5.0.0"
   }
 }
