--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "angular-right-click": "^0.1.0",
     "angular-sanitize": "^1.5.8",
     "bootstrap-sass": "^3.0.0",
+    "font-awesome": "^4.7.0",
     "jquery": "^2.2.4",
     "jquery-browserify": "^1.8.1",
     "jquery-ui": "^1.12.0",
