--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery": "^2.2.4",
     "jquery-browserify": "^1.8.1",
     "jquery-ui": "^1.12.0",
+    "jquery.panzoom": "^3.2.2",
     "laravel-elixir": "^5.0.0"
   },
   "babel": {
