--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "angular-sanitize": "^1.5.8",
     "bootstrap-sass": "^3.0.0",
     "font-awesome": "^4.7.0",
-    "jquery": "^2.2.4",
+    "jquery": "^3.x",
     "jquery-browserify": "^1.8.1",
     "jquery-ui": "^1.12.0",
     "jquery.panzoom": "^3.2.2",
