--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
     ],
 
     "require": {
-        "php": ">=5.5.9",
-        "laravel/framework": "5.2.*",
+        "php": ">=5.6.4",
+        "laravel/framework": "5.3.*",
         "guzzlehttp/guzzle":"~6.0",
         "daverodal/wargaming": "dev-master",
         "daverodal/Medieval": "dev-master",
@@ -32,8 +32,8 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
-        "symfony/css-selector": "2.8.*|3.0.*",
-        "symfony/dom-crawler": "2.8.*|3.0.*"
+        "symfony/css-selector": "3.1.*",
+        "symfony/dom-crawler": "3.1.*"
     },
     "autoload": {
         "classmap": [
