--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
     "tests"
   ],
   "dependencies": {
-    "angular-right-click": "^0.1.0"
+    "angular-right-click": "^0.1.0",
+    "jquery-ui": "^1.12.1"
+
   }
 }
