--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
     ],
 
     "require": {
-        "php": ">=5.6.4",
-        "laravel/framework": "5.4.*",
+        "php": ">=7.0.0",
+        "laravel/framework": "5.5.*",
         "guzzlehttp/guzzle":"~6.0",
         "daverodal/wargaming": "dev-master",
         "daverodal/Medieval": "dev-master",
@@ -26,9 +26,10 @@
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7",
+        "phpunit/phpunit": "~6.0",
         "symfony/css-selector": "3.1.*",
-        "symfony/dom-crawler": "3.1.*"
+        "symfony/dom-crawler": "3.1.*",
+        "filp/whoops":         "~2.0"
     },
     "autoload": {
         "classmap": [
@@ -60,6 +61,10 @@
         ],
         "post-update-cmd": [
             "php artisan optimize"
+        ],
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover"
         ]
     },
     "config": {
