--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
+    "angular": "^1.5.8",
+    "angular-modal-service": "^0.10.1",
+    "angular-right-click": "^0.1.0",
+    "angular-sanitize": "^1.5.8",
     "axios": "^0.16.2",
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^5.0.1",
