--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
     "jquery-ui": "^1.12.1",
-    "jquery-ui-bundle": "^1.12.1"
+    "jquery-ui-bundle": "^1.12.1",
+    "vue-resource": "^1.3.4"
   }
 }
