--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "angular-right-click": "^0.1.0",
     "angular-sanitize": "^1.5.8",
     "axios": "^0.16.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^5.0.1",
     "jquery": "^3.1.1",
@@ -27,6 +29,7 @@
     "font-awesome": "^4.7.0",
     "jquery-ui": "^1.12.1",
     "jquery-ui-bundle": "^1.12.1",
-    "vue-resource": "^1.3.4"
+    "vue-resource": "^1.3.4",
+    "vuex": "^3.0.1"
   }
 }
