--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hoek": "^5.0.4",
     "jquery-ui": "^1.12.1",
     "jquery-ui-bundle": "^1.12.1",
+    "url-parse": "^1.4.3",
     "vue-resource": "^1.3.4",
     "vuex": "^3.0.1"
   }
