--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "cryptiles": "^4.1.2",
     "font-awesome": "^4.7.0",
     "hoek": "^5.0.4",
     "jquery-ui": "^1.12.1",
