--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "cross-env": "^5.0.1",
     "jquery": "^3.1.1",
     "laravel-mix": "^1.0",
-    "lodash": "^4.17.4",
-    "vue": "^2.1.10"
+    "lodash": "^4.17.4"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
@@ -30,7 +29,9 @@
     "jquery-ui": "^1.12.1",
     "jquery-ui-bundle": "^1.12.1",
     "url-parse": "^1.4.3",
-    "vue-resource": "^1.3.4",
+    "vue": "^2.5.22",
+    "vue-resource": "^1.5.1",
+    "vue-template-compiler": "^2.5.22",
     "vuex": "^3.0.1"
   }
 }
