--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
     "axios": "^0.16.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "bootstrap-sass": "^3.3.7",
+    "bootstrap-sass": "^3.4.1",
     "cross-env": "^5.0.1",
     "jquery": "^3.1.1",
     "laravel-mix": "^1.0",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.11",
+    "webpack-dev-server": ">=3.1.11",
+    "extend": ">=3.0.2"
   },
   "dependencies": {
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^3.4.1",
     "font-awesome": "^4.7.0",
     "jquery-ui": "^1.12.1",
     "jquery-ui-bundle": "^1.12.1",
@@ -32,6 +34,8 @@
     "vue": "^2.5.22",
     "vue-resource": "^1.5.1",
     "vue-template-compiler": "^2.5.22",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "extend": ">=3.0.2",
+    "webpack-dev-server": ">=3.1.11"
   }
 }
