--- a/composer.json
+++ b/composer.json
@@ -1,93 +1,92 @@
 {
-  "name": "laravel/laravel",
-  "description": "The Laravel Framework.",
-  "keywords": [
-    "framework",
-    "laravel"
-  ],
-  "license": "MIT",
-  "type": "project",
-  "repositories": {
-    "wargaming": {
-      "type": "path",
-      "url": "../wargaming"
+    "name": "laravel/laravel",
+    "description": "The Laravel Framework.",
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
+    "license": "MIT",
+    "type": "project",
+    "repositories": {
+        "wargaming": {
+            "type": "path",
+            "url": "../wargaming"
+        },
+        "medieval": {
+            "type": "path",
+            "url": "../medieval"
+        },
+        "rebellion": {
+            "type": "path",
+            "url": "../rebellion"
+        },
+        "spi": {
+            "type": "path",
+            "url": "../spi"
+        },
+        "tactical": {
+            "type": "path",
+            "url": "../tactical"
+        }
     },
-    "medieval": {
-      "type": "path",
-      "url": "../medieval"
+    "require": {
+        "php": ">=7.2.0",
+        "laravel/framework": "^5.8.0",
+        "guzzlehttp/guzzle": "~6.0",
+        "cmgmyr/messenger": "~2.0",
+        "daverodal/wargaming": "dev-master",
+        "daverodal/medieval": "dev-master",
+        "daverodal/rebellion": "dev-master",
+        "daverodal/tactical": "dev-master",
+        "daverodal/spi": "dev-master"
     },
-    "rebellion": {
-      "type": "path",
-      "url": "../rebellion"
+    "require-dev": {
+        "fzaninotto/faker": "~1.4",
+        "mockery/mockery": "0.9.*",
+        "phpunit/phpunit": "~7.5",
+        "symfony/css-selector": "3.1.*",
+        "symfony/dom-crawler": "3.1.*",
+        "filp/whoops": "~2.0"
     },
-    "spi": {
-      "type": "path",
-      "url": "../spi"
+    "autoload": {
+        "classmap": [
+            "database"
+        ],
+        "psr-4": {
+            "App\\": "app/"
+        },
+        "files": [
+            "app/Helpers/FormatDateDiffHelper.php"
+        ]
     },
-    "tactical": {
-      "type": "path",
-      "url": "../tactical"
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
+    "scripts": {
+        "post-root-package-install": [
+            "php -r \"copy('.env.example', '.env');\""
+        ],
+        "post-create-project-cmd": [
+            "php artisan key:generate"
+        ],
+        "post-install-cmd": [
+            "php artisan clear-compiled",
+            "php artisan optimize"
+        ],
+        "pre-update-cmd": [
+            "php artisan clear-compiled"
+        ],
+        "post-update-cmd": [
+            "php artisan optimize"
+        ],
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover"
+        ]
+    },
+    "config": {
+        "preferred-install": "dev"
     }
-  },
-  "require": {
-    "php": ">=7.0.0",
-    "laravel/framework": "5.5.*",
-    "guzzlehttp/guzzle": "~6.0",
-    "cmgmyr/messenger": "~2.0",
-    "daverodal/wargaming": "dev-master",
-    "daverodal/medieval": "dev-master",
-    "daverodal/rebellion": "dev-master",
-    "daverodal/tactical": "dev-master",
-    "daverodal/spi": "dev-master"
-
-  },
-  "require-dev": {
-    "fzaninotto/faker": "~1.4",
-    "mockery/mockery": "0.9.*",
-    "phpunit/phpunit": "~6.0",
-    "symfony/css-selector": "3.1.*",
-    "symfony/dom-crawler": "3.1.*",
-    "filp/whoops": "~2.0"
-  },
-  "autoload": {
-    "classmap": [
-      "database"
-    ],
-    "psr-4": {
-      "App\\": "app/"
-    },
-    "files": [
-      "app/Helpers/FormatDateDiffHelper.php"
-    ]
-  },
-  "autoload-dev": {
-    "classmap": [
-      "tests/TestCase.php"
-    ]
-  },
-  "scripts": {
-    "post-root-package-install": [
-      "php -r \"copy('.env.example', '.env');\""
-    ],
-    "post-create-project-cmd": [
-      "php artisan key:generate"
-    ],
-    "post-install-cmd": [
-      "php artisan clear-compiled",
-      "php artisan optimize"
-    ],
-    "pre-update-cmd": [
-      "php artisan clear-compiled"
-    ],
-    "post-update-cmd": [
-      "php artisan optimize"
-    ],
-    "post-autoload-dump": [
-      "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-      "@php artisan package:discover"
-    ]
-  },
-  "config": {
-    "preferred-install": "dev"
-  }
 }
