--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "url-parse": "^1.4.3",
     "vue": "^2.5.22",
     "vue-resource": "^1.5.1",
+    "vue-router": "^3.1.3",
+    "vue-moveable": "^1.1.0",
     "vue-template-compiler": "^2.5.22",
-    "vuex": "^3.0.1",
+    "vuex": "^3.1.2",
     "extend": ">=3.0.2",
     "webpack-dev-server": ">=3.1.11"
   }
