--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,22 @@
         "wargaming": {
             "type": "path",
             "url": "../wargaming"
+        },
+        "rebellion": {
+            "type": "path",
+            "url": "../rebellion"
+        },
+        "spi": {
+            "type": "path",
+            "url": "../spi"
+        },
+        "tactical": {
+            "type": "path",
+            "url": "../tactical"
+        },
+        "medieval": {
+            "type": "path",
+            "url": "../medieval"
         }
     },
     "require": {
@@ -18,7 +34,11 @@
         "laravel/framework": "^6.0",
         "guzzlehttp/guzzle": "~6.0",
         "cmgmyr/messenger": "~2.0",
-        "daverodal/wargaming": "dev-area-game-branch",
+        "daverodal/wargaming": "dev-master",
+        "daverodal/medieval": "dev-master",
+        "daverodal/spi": "dev-master",
+        "daverodal/rebellion": "dev-master",
+        "daverodal/tactical": "dev-master",
         "laravel/helpers": "^1.2"
     },
     "require-dev": {
