--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
         "daverodal/spi": "dev-master",
         "daverodal/rebellion": "dev-master",
         "daverodal/tactical": "dev-master",
-        "laravel/helpers": "^1.2"
+        "laravel/helpers": "^1.2",
+        "laravelcollective/html": "^6.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
