made area games have publish button so they are more like hex games.
Made moves and casualities appear on border ares.....

--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,8 @@
         "phpunit/phpunit": "~7.5",
         "symfony/css-selector": "3.1.*",
         "symfony/dom-crawler": "3.1.*",
-        "filp/whoops": "~2.0"
+        "filp/whoops": "~2.0",
+        "laravel/ui": "1.*"
     },
     "autoload": {
         "classmap": [
