--- a/package.json
+++ b/package.json
@@ -1,46 +1,50 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "npm run development",
-    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch-poll": "npm run watch -- --watch-poll",
-    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-  },
-  "devDependencies": {
-    "angular": "^1.5.8",
-    "angular-modal-service": "^0.10.1",
-    "angular-right-click": "^0.1.0",
-    "angular-sanitize": "^1.5.8",
-    "axios": "^0.18.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "bootstrap-sass": "^3.4.1",
-    "cross-env": "^5.0.1",
-    "jquery": ">=3.4.0",
-    "laravel-mix": "^1.0",
-    "lodash": "^4.17.11",
-    "webpack-dev-server": ">=3.1.11",
-    "extend": ">=3.0.2",
-    "tar": ">=4.4.2"
-  },
-  "dependencies": {
-    "@markarian/wargame-vue-lib": "0.0.9",
-    "bootstrap": "^3.4.1",
-    "extend": ">=3.0.2",
-    "font-awesome": "^4.7.0",
-    "jquery-ui": "^1.12.1",
-    "jquery-ui-bundle": "^1.12.1",
-    "url-parse": "^1.4.3",
-    "vue": "^2.5.22",
-    "vue-moveable": "^1.1.0",
-    "vue-resource": "^1.5.1",
-    "vue-router": "^3.1.3",
-    "vue-template-compiler": "^2.5.22",
-    "vuex": "^3.1.2",
-    "webpack-dev-server": ">=3.1.11",
-    "vue-componentz": "0.0.1"
-  }
+    "private": true,
+    "scripts": {
+        "dev": "npm run development",
+        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "watch-poll": "npm run watch -- --watch-poll",
+        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "prod": "npm run production",
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    },
+    "devDependencies": {
+        "angular": "^1.5.8",
+        "angular-modal-service": "^0.10.1",
+        "angular-right-click": "^0.1.0",
+        "angular-sanitize": "^1.5.8",
+        "axios": "^0.18.1",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-stage-2": "^6.24.1",
+        "bootstrap": "^4.0.0",
+        "bootstrap-sass": "^3.4.1",
+        "cross-env": "^5.0.1",
+        "extend": ">=3.0.2",
+        "jquery": "^3.2",
+        "laravel-mix": "^1.0",
+        "lodash": "^4.17.11",
+        "popper.js": "^1.12",
+        "tar": ">=4.4.2",
+        "webpack-dev-server": ">=3.1.11"
+    },
+    "dependencies": {
+        "@markarian/wargame-vue-lib": "0.0.9",
+        "bootstrap": "^3.4.1",
+        "bootstrap-scss": "^4.5.3",
+        "extend": ">=3.0.2",
+        "font-awesome": "^4.7.0",
+        "jquery-ui": "^1.12.1",
+        "jquery-ui-bundle": "^1.12.1",
+        "url-parse": "^1.4.3",
+        "vue": "^2.5.22",
+        "vue-componentz": "0.0.1",
+        "vue-flash-message": "^0.7.2",
+        "vue-moveable": "^1.1.0",
+        "vue-resource": "^1.5.1",
+        "vue-router": "^3.1.3",
+        "vue-template-compiler": "^2.5.22",
+        "vuex": "^3.1.2",
+        "webpack-dev-server": ">=3.1.11"
+    }
 }
