--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
         "angular-right-click": "^0.1.0",
         "angular-sanitize": "^1.5.8",
         "axios": "^0.21.1",
-        "babel-preset-es2015": "^6.24.1",
+        "babel-plugin-transform-object-rest-spread": "^6.26.0",
+        "babel-preset-env": "^1.7.0",
         "babel-preset-stage-2": "^6.24.1",
         "bootstrap": "^4.0.0",
         "bootstrap-sass": "^3.4.1",
         "cross-env": "^5.0.1",
         "extend": ">=3.0.2",
         "jquery": "^3.5",
-        "laravel-mix": "^1.0",
+        "laravel-mix": "^2.0.0",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
         "tar": ">=4.4.2",
